Added coming soon page.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>CrowdFulfill is Coming soon</title>
-  <meta name="description" content="Arcus is Responsive Business Template, crafted with Foundation framwork with HTML5, CSS3 and jQuery.">
-  <meta name="keywords" content="corporate, template, html5, css3, jQuery, themeforest, responsive, business">
-  <meta name="author" content="harmonikas996 (http://www.lukacvetinovic.com)">
+  <meta name="description" content="We do order fulfillment for crowdfunded companies only. Get realtime inventory and order data 24/7 with our cloud-based WMS..">
+  <meta name="keywords" content="crowdfunding, orders, rewards, fulfillment, storage, shipping, inventory control">
+  <meta name="author" content="CrowdFulfill, a division of Redrock Fulfillment.">
 
   
 	<!-- CSS - "css/foundation.css" is default -->
