Added retina.js and retina logo.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 	<div class="top_nav">
 	<div class="row">
 	<div class="large-4 columns logo">
-		<img src="img/Crowd-Fulfill-Logo-Sm.png" />
+		<img src="img/Crowd-Fulfill-Logo-Sm@2x.png" />
 	</div>
 	<div class="large-8 columns">
 	<nav>
@@ -246,5 +246,10 @@
 });
   </script>
   <!-- end of Animated Progress Bars -->
+
+  <!-- Retina Display Check -->
+  <script type="text/javascript" src="js/retina/retina.js"></script>
+  <!-- end of Retina Display Check -->
+
 </body>
 </html>
