--- a/index.html
+++ b/index.html
@@ -1,194 +1,235 @@
 <!DOCTYPE html>
-<!--[if IE 8]> 				 <html class="no-js lt-ie9" lang="en" > <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
+<!--[if IE 8]>
+	<html class="no-js lt-ie9" lang="en" >
+<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en" >
+<!--<![endif]-->
 
-<head>
-	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>CrowdFulfill is Coming soon</title>
-  <meta name="description" content="We do order fulfillment for crowdfunded companies only. Get realtime inventory and order data 24/7 with our cloud-based WMS..">
-  <meta name="keywords" content="crowdfunding, orders, rewards, fulfillment, storage, shipping, inventory control">
-  <meta name="author" content="CrowdFulfill, a division of Redrock Fulfillment.">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<title>CrowdFulfill does order fulfillment for crowdfunded companies only.</title>
+		<meta name="description" content="We do order fulfillment for crowdfunded companies only. Get realtime inventory and order data 24/7 with our cloud-based WMS.">
+		<meta name="keywords" content="crowdfunding, orders, rewards, fulfillment, storage, shipping, inventory control, backers, quality control">
+		<meta name="author" content="CrowdFulfill, a division of Redrock Fulfillment.">
 
-  
-	<!-- CSS - "css/foundation.css" is default -->
-	<link rel="stylesheet" href="css/orange.css">
 
-	<!-- Modernizr 2.6.2 -->
-	<script src="js/modernizr.custom.js"></script>
+		<!-- CSS - "css/foundation.css" is default -->
+		<link rel="stylesheet" href="css/orange.css">
 
-	<!-- Latest jQuery -->
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-	
-  <!-- Google font -->
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+		<!-- Modernizr 2.6.2 -->
+		<script src="js/modernizr.custom.js"></script>
 
-  <!-- FONT AWESOME icons -->
-  <link rel="stylesheet" href="css/font-awesome.min.css">
+		<!-- Latest jQuery -->
+		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 
-  <!-- SUPERFISH NAVIGATION  -->
+		<!-- Google font -->
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+
+		<!-- FONT AWESOME icons -->
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+
+		<!-- SUPERFISH NAVIGATION  -->
 		<link rel="stylesheet" href="js/superfish-nav/dist/css/superfish.css" media="screen">
 		<style> </style>
 		<script src="js/superfish-nav/dist/js/hoverIntent.js"></script>
 		<script src="js/superfish-nav/dist/js/superfish.js"></script>
+
 		<script>
+			(function($){ //create closure so we can safely use $ as alias for jQuery
+				$(document).ready(function(){
 
-		(function($){ //create closure so we can safely use $ as alias for jQuery
+					// initialise plugin
+					var example = $('#example').superfish({
+						//add options here if required
+					});
 
-			$(document).ready(function(){
+					// buttons to demonstrate Superfish's public methods
+					$('.destroy').on('click', function(){
+						example.superfish('destroy');
+					});
 
-				// initialise plugin
-				var example = $('#example').superfish({
-					//add options here if required
+					$('.init').on('click', function(){
+						example.superfish();
+					});
+
+					$('.open').on('click', function(){
+						example.children('li:first').superfish('show');
+					});
+
+					$('.close').on('click', function(){
+						example.children('li:first').superfish('hide');
+					});
 				});
 
-				// buttons to demonstrate Superfish's public methods
-				$('.destroy').on('click', function(){
-					example.superfish('destroy');
-				});
-
-				$('.init').on('click', function(){
-					example.superfish();
-				});
-
-				$('.open').on('click', function(){
-					example.children('li:first').superfish('show');
-				});
-
-				$('.close').on('click', function(){
-					example.children('li:first').superfish('hide');
-				});
-			});
-
-		})(jQuery);
-
-
+			})(jQuery);
 		</script>
-
-		<!-- Count-down Timer -->
-		  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="js/jquery.countdown.js"></script>
-<script type="text/javascript">
-      $(function() {
-        var endDate = "August 1, 2014 09:00:00";
-
-        $('.countdown.simple').countdown({ date: endDate });
-
-        $('.countdown.styled').countdown({
-          date: endDate,
-          render: function(data) {
-            $(this.el).html("<div>" + this.leadingZeros(data.days, 3) + " <span>days</span></div><div>" + this.leadingZeros(data.hours, 2) + " <span>hrs</span></div><div>" + this.leadingZeros(data.min, 2) + " <span>min</span></div><div>" + this.leadingZeros(data.sec, 2) + " <span>sec</span></div>");
-          }
-        });
-
-        $('.countdown.callback').countdown({
-          date: +(new Date) + 10000,
-          render: function(data) {
-            $(this.el).text(this.leadingZeros(data.sec, 2) + " sec");
-          },
-          onEnd: function() {
-            $(this.el).addClass('ended');
-          }
-        }).on("click", function() {
-          $(this).removeClass('ended').data('countdown').update(+(new Date) + 10000).start();
-        });
-
-      });
-    </script>
-</head>
-
-
-<body>
-	<!-- NAVIBAR -->
-	<div class="top_nav">
-	<div class="row">
-	<div class="large-4 columns logo">
-		<img src="img/CrowdFulfill-Logo-Sm.svg" />
-	</div>
-	<div class="large-8 columns">
-	<nav>
-	<!-- Navigation -->
-	<ul class="sf-menu" id="example">
-			<li class="current">
-				<a href="index.html">Home</a>
-			</li>
-			<li>
-				<a href="#">How it Works</a>
-			</li>
-			<li>
-				<a href="#">Contact</a>
-			</li>
-	</ul><!-- end of Navigation -->
-		<!-- Navigation on Mobile Devices -->
-				<select> 
-					<option value="#" selected="selected">Menu</option> 
-					<option value="index.html">Home</option>
-					<option value="#">How it Works</option> 
-					<option value="#">Contact</option> 
-				</select>
-		<!-- end of Navigation on Mobile Devices -->
-	</nav>
-	</div>
-	</div>
-	</div>
-	<!-- end of NAVIBAR -->
-
-
-	<div class="row arcus-content divider-2">
-		<div class="large-6 columns">
-		<div class="big-h">
-		<h1>Shipping Soon</h1>
-		<h5 class="subheader">Want us to alert you of our launch?</h5>
-		<p>Running a crowdfunding campaign is time-consuming.  Fill in your email address below, and we'll notify you when our service launches.  You'll <em>only</em> get a launch notification from us and nothing more.  We hate spam too!</p>
-		<br>
-		<br>
-		<!-- Begin MailChimp Signup Form -->
-			<form class="large-8 subscribe" action="http://crowdfulfill.us8.list-manage.com/subscribe/post?u=53101cab805a27cec7ae9c143&amp;id=6bbf36f227" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" data-abide>
-			  <div class="email-field">
-				<input style="height: 45px;" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address" required>
-				<small class="error">Please, enter valid email address.</small>
-			  </div>
-			  <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button small">Subscribe</button>
-			</form><!--End mc_embed_signup-->
-		</div>
-		</div>
-		<div class="large-5 large-offset-1 columns medium-h">
-			<h5>We're putting the finishing touches on everything.</h5>
-			<h6 class="subheader optimized">Just can't wait? Call us at 435-214-4466.</h6>
-			<br>
-			<br>
-			<div class="countdown styled"></div>
-		</div>
-	</div>
-	<!-- Footer_small -->
-	<div class="footer_small light">
-		<div class="row">
-			<div class="footer_small_copyright copyright_mobile">
-				<div class="large-6 columns">
-				<p>&#169; 2014 CrowdFulfill, a division of Redrock Fulfillment.</p>
+	</head>
+	<body>
+		<!-- NAVIBAR -->
+		<div class="top_nav">
+			<div class="row">
+				<div class="large-4 columns logo"><img src="img/Crowd-Fulfill-Logo-Sm.png" /></div>
+				<div class="large-8 columns">
+					<nav>
+						<!-- Navigation -->
+						<ul class="sf-menu" id="example">
+							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="how-fulfillment-works.html">How it Works</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="blog.html">Blog</a></li>
+						</ul><!-- end of Navigation -->
+						<!-- Navigation on Mobile Devices -->
+						<select> 
+							<option value="#" selected="selected">Menu</option> 
+							<option value="index.html">Home</option>
+							<option value="how-fulfillment-works.html">How it Works</option> 
+							<option value="contact.html">Contact</option>
+							<option value="blog.html">Blog</option>
+						</select>
+						<!-- end of Navigation on Mobile Devices -->
+					</nav>
 				</div>
 			</div>
-			<div class="footer_small_social to-right">
-			<div class="large-6 columns">
-			<a target="_blank" href="https://facebook.com/CrowdFulfill"><i class="icon-facebook"></i></a>
-			<a target="_blank" href="http://twitter.com/crowdfulfill"><i class="icon-twitter"></i></a>
-			<a target="_blank" href="https://plus.google.com/u/0/b/106625895848547729480/106625895848547729480/about"><i class="icon-google-plus"></i></a>
-			<a target="_blank" href="#"><i class="icon-youtube-play"></i></a>
-			<a href="skype:CrowdFulfill?call"><i class="icon-skype"></i></a>   
-			<a target="_blank" href="http://www.linkedin.com/company/crowdfulfill/"><i class="icon-linkedin"></i></a>
-			<a target="_blank" href="https://www.dropbox.com/sh/0ch4fohrzc0vwvz/AADdTdau0N6og3cjPUA-adnNa"><i class="icon-dropbox"></i></a>
-			</div>
+		</div>
+		<!-- end of NAVIBAR -->
+
+		<!-- VIDEO -->
+		<div class="cta_1">
+			<div class="row">
+				<div class="large-6 columns">
+<!-- 					<div class="flex-video widescreen vimeo">
+						<iframe src="http://player.vimeo.com/video/102049264" width="350" height="197" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					</div> -->
+					<img src="img/boxes.svg" />
+				</div>
+				<div class="cta_1_text" >
+					<div class="large-6 columns">
+						<h1>Fast Rewards Shipping</h1>
+						<h5 class="subheader">Focus on growth, not the mundane.</h5>
+						<p>At CrowdFulfill you&rsquo;ll get logistics, inventory and quality control at prices that won&rsquo;t bust your budget.  Our cloud-based warehouse management system allows for full visibility into your fulfillment program 24/7, and best of all, we have no monthly minimums and no contracts.</p>
+						<a href="get-a-fulfillment-quote.html" class="medium button optimized-button">Get a Quote</a>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div><!-- end of Footer_small -->
+		<!-- end of VIDEO -->
 
-  <script>
-  document.write('<script src=' +
-  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-  '.js><\/script>')
-  </script>
-  
-  <script src="js/foundation.min.js"></script>
+
+
+
+		<!-- MAIN FEATURES -->
+		<div id="features" class="arcus-content">
+			<div class="row">
+				<div class="large-12 columns big-h to-center">
+					<h1>How May We Help You?</h1>
+					<h5 class="subheader">It&rsquo;s not just about shipping, it&rsquo;s about helping you succeed.</h5>
+					<!-- <a href="components.html" class="medium button optimized-button">Feature list</a> -->
+				</div>
+			</div>
+			<div class="row services-i ">
+				<div class="large-4 columns optimized to-left">
+				<i class="fa fa-cube"></i><span>Rewards Shipping</span>
+				<p>Get your orders shipped for as little as $1.50 per order.  Orders can be accepted via API or batch file, and if they arrive before 1:00 p.m. Mountain time, they&rsquo;re shipped same day.</p>
+				</div>
+				<div class="large-4 columns optimized to-left">
+				<i class="fa fa-barcode"></i><span>Inventory Control</span>
+				<p>With our online account portal, you can run stock status reports 24/7 and receive automatic low stock alerts when items go below your custom-set thresholds.</p>
+				</div>
+				<div class="large-4 columns optimized to-left">
+				<i class="fa fa-thumbs-o-up"></i><span>Quality Control</span>
+				<p>Inspecting products for defects minimizes product returns and maximizes backer satisfaction.  We&rsquo;ll check for shortages and defects, quarantining anything that doesn&rsquo;t meet your standards.</p>
+				</div>
+			</div>
+			<div class="row services-i ">
+				<div class="large-4 columns optimized to-left">
+				<i class="fa fa-headphones"></i><span>Call Center</span>
+				<p>If you&rsquo;re getting overwhemled by customer service, give us a try.  We can handle your tickets and phone calls with ease, giving your company a posihed public face and very happy backers.</p>
+				</div>
+				<div class="large-4 columns optimized to-left">
+				<i class="fa fa-desktop"></i><span>Account Portal</span>
+				<p>Check on order statuses in realtime, manually enter an order, or pull detailed reports.  With our online account portal, you get full visibility into your fulfillment proram when you need it.</p>
+				</div>
+				<div class="large-4 columns optimized to-left">
+				<i class="fa fa-group"></i><span>Account Support</span>
+				<p>You&rsquo;ll get a single point of contact, ready to answer questions or implement program changes when you need them, at no extra charge.  Call, email, or Skype.  We love to hear from our clients!</p>
+				</div>
+			</div>
+		</div>
+		<!-- end of MAIN FEATURES -->
+
+		<!-- Footer_big -->
+		<div class="footer_big arcus-content">
+			<div class="row">
+				<div class="large-3 columns responsive_space">
+				<h3>Get in Touch</h3>
+				<div class="decorative-line"></div>
+					<p>
+						CrowdFulfill<br />
+						1076 E Commerce Dr, Ste 200<br />
+						Saint George, UT 84790<br />
+						(702) 997-6980<br />
+						Monday - Friday<br />
+						9 am - 4 pm Mountain time
+					</p>
+				</div>
+
+				<div class="large-3 columns responsive_space">
+				<h3>Partners</h3>
+				<div class="decorative-line"></div>
+					<ul>
+					  <li><a href="http://www.3plcentral.com" target="_blank">3PL Central</a></li>
+					  <li><a href="http://www.ultracart.com/features/" target="_blank">UltraCart</a></li>
+					  <li><a href="http://www.orderdesk.me/integrations/" target="_blank">OrderDesk.me</a></li>
+					</ul>
+				</div>
+
+				<div class="large-3 columns responsive_space">
+					<h3>Newsletter</h3>
+					<div class="decorative-line"></div>
+					<p>Get service alerts and updates delivered straight to your inbox.</p>
+					<a class="button footer-button" href="http://eepurl.com/YAsjj" target="_blank">Sign Up</a>
+				</div>
+
+				<div class="large-3 columns responsive_space">
+					<h3>Moment of Zen</h3>
+					<div class="decorative-line"></div>
+					<img src="img/Moment-of-Zen.png"></img>
+				</div>
+			</div>
+		</div>
+		<!-- end of Footer_big -->
+		<!-- Footer_small -->
+		<div class="footer_small">
+			<div class="row">
+				<div class="footer_small_copyright copyright_mobile">
+					<div class="large-6 columns">
+					<p>&#169; 2014 CrowdFulfill, a division of Redrock Fulfillment.</p>
+					</div>
+				</div>
+				<div class="footer_small_social to-right">
+					<div class="large-6 columns">
+						<a target="_blank" href="https://facebook.com/CrowdFulfill"><i class="fa fa-facebook"></i></a>
+						<a target="_blank" href="http://twitter.com/crowdfulfill"><i class="fa fa-twitter"></i></a>
+						<a target="_blank" href="https://plus.google.com/u/0/b/106625895848547729480/106625895848547729480/about"><i class="fa fa-google-plus"></i></a>
+						<a target="_blank" href="#"><i class="fa fa-youtube-play"></i></a>
+						<a href="skype:CrowdFulfill?call"><i class="fa fa-skype"></i></a>   
+						<a target="_blank" href="http://www.linkedin.com/company/crowdfulfill/"><i class="fa fa-linkedin"></i></a>
+						<a target="_blank" href="https://www.dropbox.com/sh/0ch4fohrzc0vwvz/AADdTdau0N6og3cjPUA-adnNa"><i class="fa fa-dropbox"></i></a>
+					</div>
+				</div>
+			</div>
+		</div><!-- end of Footer_small -->
+			
+
+	  <script>
+	  document.write('<script src=' +
+	  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
+	  '.js><\/script>')
+	  </script>
+	  
+	  <script src="js/foundation.min.js"></script>
   <!--
   
   <script src="js/foundation/foundation.js"></script>
@@ -224,27 +265,5 @@
   <script src="js/foundation/foundation.abide.js"></script>
   
   -->
-  
-  <script>
-    $(document).foundation();
-  </script>
-  
-  <!-- Responsive nav -->
-    <script>
-  $("nav select").change(function() {
-  window.location = $(this).find("option:selected").val();
-  });
-  </script>
-  <!-- end of Responsive nav -->
-  
-  <!-- Animated Progress Bars -->
-  <script>
-  jQuery('.skillbar').each(function(){
-	jQuery(this).find('.skillbar-bar').animate({
-		width:jQuery(this).attr('data-percent')
-	},8500);
-});
-  </script>
-  <!-- end of Animated Progress Bars -->
-</body>
+	</body>
 </html>
