--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <meta name="author" content="CrowdFulfill">
 
 	<!-- CSS - "css/foundation.css" is default -->
-	<link rel="stylesheet" href="css/foundation.css">
+	<link rel="stylesheet" href="css/orange.css">
 
 	<!-- Modernizr 2.6.2 -->
 	<script src="js/modernizr.custom.js"></script>
