--- a/how-fulfillment-works.html
+++ b/how-fulfillment-works.html
@@ -9,7 +9,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>CrowdFulfill does order fulfillment for crowdfunded companies only.</title>
+		<title>Learn what order fulfillment is and how CrowdFulfill can with your shipping and inventory management.</title>
 		<meta name="description" content="We do order fulfillment for crowdfunded companies only. Get realtime inventory and order data 24/7 with our cloud-based WMS.">
 		<meta name="keywords" content="crowdfunding, orders, rewards, fulfillment, storage, shipping, inventory control, backers, quality control">
 		<meta name="author" content="CrowdFulfill, a division of Redrock Fulfillment.">
@@ -29,6 +29,28 @@
 
 		<!-- FONT AWESOME icons -->
 		<link rel="stylesheet" href="css/font-awesome.min.css">
+
+		<!-- Responsive nav -->
+		<script>
+			// Create the dropdown base
+			$("<select />").appendTo("nav");
+
+			// Create default option "Go to..."
+			$("<option />", {
+			   "selected": "selected",
+			   "value"   : "",
+			   "text"    : "Go to..."
+			}).appendTo("nav select");
+
+			// Populate dropdown with menu items
+			$("nav a").each(function() {
+			 var el = $(this);
+			 $("<option />", {
+				 "value"   : el.attr("href"),
+				 "text"    : el.text()
+			 }).appendTo("nav select");
+			});
+		</script>
 
 		<!-- SUPERFISH NAVIGATION  -->
 		<link rel="stylesheet" href="js/superfish-nav/dist/css/superfish.css" media="screen">
@@ -67,150 +89,151 @@
 		</script>
 	</head>
 	<body>
-	<!-- NAVIBAR -->
-	<div class="top_nav">
-		<div class="row">
-			<div class="large-4 columns logo"><img src="img/Crowd-Fulfill-Logo-Sm.png" /></div>
-			<div class="large-8 columns">
-				<nav>
-					<!-- Navigation -->
-					<ul class="sf-menu" id="example">
-						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="how-fulfillment-works.html">How it Works</a></li>
-						<li><a href="contact.html">Contact</a></li>
-						<li><a href="blog.html">Blog</a></li>
-					</ul><!-- end of Navigation -->
-					<!-- Navigation on Mobile Devices -->
-					<select> 
-						<option value="#" selected="selected">Menu</option> 
-						<option value="index.html">Home</option>
-						<option value="how-fulfillment-works.html">How it Works</option> 
-						<option value="contact.html">Contact</option>
-						<option value="blog.html">Blog</option>
-					</select>
-					<!-- end of Navigation on Mobile Devices -->
-				</nav>
-			</div>
-		</div>
-	</div>
-	<!-- end of NAVIBAR -->
-
-	<!-- Blog Title -->
-	<div class="row arcus-content">
-		<div class="large-12 columns big-h no-padding to-center">
-			<h1>How Fulfillment Works</h1>
-			<h5 class="subheader">Getting started with us is an easy, four-step process.</h5>
-		</div>
-	</div>
-	<!-- end of Blog Title -->
-
-
-	<!-- Content -->
-	<div class="row arcus-content">
-		<h5>Step 1: Discovery</h5>
-		<p>
-			During this phase, our sales and technical staffs will review with you all of your requirements. We&rsquo;ll discuss pain points and your future plans. We have a commercial printer with 30+ years of experience on staff for all your packaging needs. We also have strong partnerships with small parcel (UPS, FedEx, USPS, and DHL) and LTL freight carriers. Together we&rsquo;ll develop a high-quality fulfillment program, that&rsquo;s scalable, at a cost that&rsquo;s right for you.
-		</p>
-
-		<h5>Step 2: Receiving</h5>
-		<p>
-			During the receiving phase, either you or your product manufacturer will send us an advance shipment notice for all product to be received. Products can be sent to our fulfillment center via truck line or small parcel freight. Once all items have been received, we will begin a full inventory count of all products and assign SKUs as needed. Once the inventory count is completed, the results will be entered into our warehouse management system for tracking, and the products will be put away. From there, shopping cart integration or batch file testing can begin.
-		</p>
-
-		<h5>Step 3: Integration</h5>
-		<p>
-			We integrate with many major shopping carts, and offer an <a href="https://www.dropbox.com/s/zddz5riyzfhqzhw/API%20Integration%20Guide.pdf" target="_blank">API</a> for clients using an open-source or custom cart.
-		</p>
-		<ul>
-			<li>UltraCart (Our recommended shopping cart)</li>
-			<li>Volusion Gold Plan  (connector subscription required)</li>
-			<li>Shopify  (connector subscription required)</li>
-			<li>Magento Community Edition  (connector subscription required)</li>
-			<li>BigCommerce  (connector subscription required)</li>
-			<li>Amazon Seller Central  (connector subscription required)</li>
-			<li>Any open-source or custom cart (via API)</li>
-			<li>BackerKit files (for Crowdfunding clients)</li>
-			<li>Celery files (for Crowdfunding clients)</li>
-			<li>Batch files (CSV, XML)</li>
-		</ul>
-
-		<h5>Step 4: Launching</h5>
-		<p>
-			During the launch phase, we begin receiving your orders via API, FTP, or EDI into our warehouse management system. We follow the procedures established during the discovery phase while picking, packing, and shipping your orders. All order and inventory information is updated in your customer portal and shopping cart (if supported) in real-time. The fulfillment center can be alerted of all returns via the customer portal (available to all system-integrated clients).
-		</p>
-	</div>
-
-	<!-- Footer_big -->
-	<div class="footer_big arcus-content">
-		<div class="row">
-			<div class="large-3 columns responsive_space">
-			<h3>Get in Touch</h3>
-			<div class="decorative-line"></div>
-				<p>
-					CrowdFulfill<br />
-					1076 E Commerce Dr, Ste 200<br />
-					Saint George, UT 84790<br />
-					(702) 997-6980<br />
-					Monday - Friday<br />
-					9 am - 4 pm Mountain time
-				</p>
-			</div>
-
-			<div class="large-3 columns responsive_space">
-			<h3>Partners</h3>
-			<div class="decorative-line"></div>
-				<ul>
-				  <li><a href="http://www.3plcentral.com" target="_blank">3PL Central</a></li>
-				  <li><a href="http://www.ultracart.com/features/" target="_blank">UltraCart</a></li>
-				  <li><a href="http://www.orderdesk.me/integrations/" target="_blank">OrderDesk.me</a></li>
-				</ul>
-			</div>
-
-			<div class="large-3 columns responsive_space">
-				<h3>Newsletter</h3>
-				<div class="decorative-line"></div>
-				<p>Get service alerts and updates delivered straight to your inbox.</p>
-				<a class="button footer-button" href="http://eepurl.com/YAsjj" target="_blank">Sign Up</a>
-			</div>
-
-			<div class="large-3 columns responsive_space">
-				<h3>Moment of Zen</h3>
-				<div class="decorative-line"></div>
-				<img src="img/Moment-of-Zen.png"></img>
-			</div>
-		</div>
-	</div>
-	<!-- end of Footer_big -->
-	<!-- Footer_small -->
-	<div class="footer_small">
-		<div class="row">
-			<div class="footer_small_copyright copyright_mobile">
-				<div class="large-6 columns">
-				<p>&#169; 2014 CrowdFulfill, a division of Redrock Fulfillment.</p>
-				</div>
-			</div>
-			<div class="footer_small_social to-right">
-				<div class="large-6 columns">
-					<a target="_blank" href="https://facebook.com/CrowdFulfill"><i class="fa fa-facebook"></i></a>
-					<a target="_blank" href="http://twitter.com/crowdfulfill"><i class="fa fa-twitter"></i></a>
-					<a target="_blank" href="https://plus.google.com/u/0/b/106625895848547729480/106625895848547729480/about"><i class="fa fa-google-plus"></i></a>
-					<a target="_blank" href="#"><i class="fa fa-youtube-play"></i></a>
-					<a href="skype:CrowdFulfill?call"><i class="fa fa-skype"></i></a>   
-					<a target="_blank" href="http://www.linkedin.com/company/crowdfulfill/"><i class="fa fa-linkedin"></i></a>
-					<a target="_blank" href="https://www.dropbox.com/sh/0ch4fohrzc0vwvz/AADdTdau0N6og3cjPUA-adnNa"><i class="fa fa-dropbox"></i></a>
+		<!-- NAVIBAR -->
+		<div class="top_nav">
+			<div class="row">
+				<div class="large-4 columns logo"><img src="img/CrowdFulfill-Logo-Sm.svg" /></div>
+				<div class="large-8 columns">
+					<nav>
+						<!-- Navigation -->
+						<ul class="sf-menu" id="example">
+							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="how-fulfillment-works.html">How it Works</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="get-a-fulfillment-quote.html">Get a Quote</a></li>
+						</ul><!-- end of Navigation -->
+						<!-- Navigation on Mobile Devices -->
+						<select> 
+							<option value="#" selected="selected">Menu</option> 
+							<option value="index.html">Home</option>
+							<option value="how-fulfillment-works.html">How it Works</option> 
+							<option value="contact.html">Contact</option>
+							<option value="blog.html">Blog</option>
+							<option value="get-a-fulfillment-quote.html">Get a Quote</option>
+						</select>
+						<!-- end of Navigation on Mobile Devices -->
+					</nav>
 				</div>
 			</div>
 		</div>
-	</div><!-- end of Footer_small -->
+		<!-- end of NAVIBAR -->
+
+		<!-- Blog Title -->
+		<div class="row arcus-content">
+			<div class="large-12 columns big-h no-padding to-center">
+				<h1>How Fulfillment Works</h1>
+				<h5 class="subheader">Getting started with us is an easy, four-step process.</h5>
+			</div>
+		</div>
+		<!-- end of Blog Title -->
+
+		<!-- Content -->
+		<div class="row arcus-content">
+			<h5>Step 1: Discovery</h5>
+			<p>
+				During this phase, our sales and technical staffs will review with you all of your requirements. We&rsquo;ll discuss pain points and your future plans. We have a commercial printer with 30+ years of experience on staff for all your packaging needs. We also have strong partnerships with small parcel (UPS, FedEx, USPS, and DHL) and LTL freight carriers. Together we&rsquo;ll develop a high-quality fulfillment program, that&rsquo;s scalable, at a cost that&rsquo;s right for you.
+			</p>
+
+			<h5>Step 2: Receiving</h5>
+			<p>
+				During the receiving phase, either you or your product manufacturer will send us an advance shipment notice for all product to be received. Products can be sent to our fulfillment center via truck line or small parcel freight. Once all items have been received, we will begin a full inventory count of all products and assign SKUs as needed. Once the inventory count is completed, the results will be entered into our warehouse management system for tracking, and the products will be put away. From there, shopping cart integration or batch file testing can begin.
+			</p>
+
+			<h5>Step 3: Integration</h5>
+			<p>
+				We integrate with many major shopping carts, and offer an <a href="https://www.dropbox.com/s/zddz5riyzfhqzhw/API%20Integration%20Guide.pdf" target="_blank">API</a> for clients using an open-source or custom cart.
+			</p>
+			<ul>
+				<li>UltraCart (Our recommended shopping cart)</li>
+				<li>Volusion Gold Plan  (connector subscription required)</li>
+				<li>Shopify  (connector subscription required)</li>
+				<li>Magento Community Edition  (connector subscription required)</li>
+				<li>BigCommerce  (connector subscription required)</li>
+				<li>Amazon Seller Central  (connector subscription required)</li>
+				<li>Any open-source or custom cart (via API)</li>
+				<li>BackerKit files (for Crowdfunding clients)</li>
+				<li>Celery files (for Crowdfunding clients)</li>
+				<li>Batch files (CSV, XML)</li>
+			</ul>
+
+			<h5>Step 4: Launching</h5>
+			<p>
+				During the launch phase, we begin receiving your orders via API, FTP, or EDI into our warehouse management system. We follow the procedures established during the discovery phase while picking, packing, and shipping your orders. All order and inventory information is updated in your customer portal and shopping cart (if supported) in real-time. The fulfillment center can be alerted of all returns via the customer portal (available to all system-integrated clients).
+			</p>
+		</div>
+
+		<!-- Footer_big -->
+		<div class="footer_big arcus-content">
+			<div class="row">
+				<div class="large-3 columns responsive_space">
+				<h3>Get in Touch</h3>
+				<div class="decorative-line"></div>
+					<p>
+						CrowdFulfill<br />
+						1076 E Commerce Dr, Ste 200<br />
+						Saint George, UT 84790<br />
+						(702) 997-6980<br />
+						Monday - Friday<br />
+						9 am - 4 pm Mountain time
+					</p>
+				</div>
+
+				<div class="large-3 columns responsive_space">
+				<h3>Partners</h3>
+				<div class="decorative-line"></div>
+					<ul>
+					  <li><a href="http://www.3plcentral.com" target="_blank">3PL Central</a></li>
+					  <li><a href="http://www.ultracart.com/features/" target="_blank">UltraCart</a></li>
+					  <li><a href="http://www.orderdesk.me/integrations/" target="_blank">OrderDesk.me</a></li>
+					</ul>
+				</div>
+
+				<div class="large-3 columns responsive_space">
+					<h3>Newsletter</h3>
+					<div class="decorative-line"></div>
+					<p>Get service alerts and updates delivered straight to your inbox.</p>
+					<a class="button footer-button" href="http://eepurl.com/YAsjj" target="_blank">Sign Up</a>
+				</div>
+
+				<div class="large-3 columns responsive_space">
+					<h3>Moment of Zen</h3>
+					<div class="decorative-line"></div>
+					<img src="img/Moment-of-Zen.png"></img>
+				</div>
+			</div>
+		</div>
+		<!-- end of Footer_big -->
+
+		<!-- Footer_small -->
+		<div class="footer_small">
+			<div class="row">
+				<div class="footer_small_copyright copyright_mobile">
+					<div class="large-6 columns">
+					<p>&#169; 2014 CrowdFulfill, a division of Redrock Fulfillment.</p>
+					</div>
+				</div>
+				<div class="footer_small_social to-right">
+					<div class="large-6 columns">
+						<a target="_blank" href="https://facebook.com/CrowdFulfill"><i class="fa fa-facebook"></i></a>
+						<a target="_blank" href="http://twitter.com/crowdfulfill"><i class="fa fa-twitter"></i></a>
+						<a target="_blank" href="https://plus.google.com/u/0/b/106625895848547729480/106625895848547729480/about"><i class="fa fa-google-plus"></i></a>
+						<a target="_blank" href="#"><i class="fa fa-youtube-play"></i></a>
+						<a href="skype:CrowdFulfill?call"><i class="fa fa-skype"></i></a>   
+						<a target="_blank" href="http://www.linkedin.com/company/crowdfulfill/"><i class="fa fa-linkedin"></i></a>
+						<a target="_blank" href="https://www.dropbox.com/sh/0ch4fohrzc0vwvz/AADdTdau0N6og3cjPUA-adnNa"><i class="fa fa-dropbox"></i></a>
+					</div>
+				</div>
+			</div>
+		</div><!-- end of Footer_small -->
 			
+		<script>
+		document.write('<script src=' +
+		('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
+		'.js><\/script>')
+		</script>
 
-	  <script>
-	  document.write('<script src=' +
-	  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-	  '.js><\/script>')
-	  </script>
-	  
-	  <script src="js/foundation.min.js"></script>
+		<script src="js/foundation.min.js"></script>
   <!--
   
   <script src="js/foundation/foundation.js"></script>
@@ -246,5 +269,17 @@
   <script src="js/foundation/foundation.abide.js"></script>
   
   -->
+
+		<script>
+			$(document).foundation();
+		</script>
+
+
+		<!-- Responsive nav -->
+		<script>
+			$("nav select").change(function() {
+				window.location = $(this).find("option:selected").val();
+			});
+		</script>
 	</body>
 </html>
