--- a/how-fulfillment-works.html
+++ b/how-fulfillment-works.html
@@ -9,7 +9,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Learn what order fulfillment is and how CrowdFulfill can with your shipping and inventory management.</title>
+		<title>Learn what order fulfillment is and how CrowdFulfill can help with your shipping and inventory management.</title>
 		<meta name="description" content="We do order fulfillment for crowdfunded companies only. Get realtime inventory and order data 24/7 with our cloud-based WMS.">
 		<meta name="keywords" content="crowdfunding, orders, rewards, fulfillment, storage, shipping, inventory control, backers, quality control">
 		<meta name="author" content="CrowdFulfill, a division of Redrock Fulfillment.">
