--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>CrowdFulfill does order fulfillment for crowdfunded companies only.</title>
+		<title>CrowdFulfill does order fulfillment and inventory management for crowdfunded companies only.</title>
 		<meta name="description" content="We do order fulfillment for crowdfunded companies only. Get realtime inventory and order data 24/7 with our cloud-based WMS.">
 		<meta name="keywords" content="crowdfunding, orders, rewards, fulfillment, storage, shipping, inventory control, backers, quality control">
 		<meta name="author" content="CrowdFulfill, a division of Redrock Fulfillment.">
@@ -29,6 +29,28 @@
 
 		<!-- FONT AWESOME icons -->
 		<link rel="stylesheet" href="css/font-awesome.min.css">
+
+		<!-- Responsive nav -->
+		<script>
+			// Create the dropdown base
+			$("<select />").appendTo("nav");
+
+			// Create default option "Go to..."
+			$("<option />", {
+			   "selected": "selected",
+			   "value"   : "",
+			   "text"    : "Go to..."
+			}).appendTo("nav select");
+
+			// Populate dropdown with menu items
+			$("nav a").each(function() {
+			 var el = $(this);
+			 $("<option />", {
+				 "value"   : el.attr("href"),
+				 "text"    : el.text()
+			 }).appendTo("nav select");
+			});
+		</script>
 
 		<!-- SUPERFISH NAVIGATION  -->
 		<link rel="stylesheet" href="js/superfish-nav/dist/css/superfish.css" media="screen">
@@ -70,7 +92,7 @@
 		<!-- NAVIBAR -->
 		<div class="top_nav">
 			<div class="row">
-				<div class="large-4 columns logo"><img src="img/Crowd-Fulfill-Logo-Sm.png" /></div>
+				<div class="large-4 columns logo"><img src="img/CrowdFulfill-Logo-Sm.svg" /></div>
 				<div class="large-8 columns">
 					<nav>
 						<!-- Navigation -->
@@ -79,6 +101,7 @@
 							<li><a href="how-fulfillment-works.html">How it Works</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="blog.html">Blog</a></li>
+							<li><a href="get-a-fulfillment-quote.html">Get a Quote</a></li>
 						</ul><!-- end of Navigation -->
 						<!-- Navigation on Mobile Devices -->
 						<select> 
@@ -87,6 +110,7 @@
 							<option value="how-fulfillment-works.html">How it Works</option> 
 							<option value="contact.html">Contact</option>
 							<option value="blog.html">Blog</option>
+							<option value="get-a-fulfillment-quote.html">Get a Quote</option>
 						</select>
 						<!-- end of Navigation on Mobile Devices -->
 					</nav>
@@ -221,15 +245,14 @@
 				</div>
 			</div>
 		</div><!-- end of Footer_small -->
-			
 
-	  <script>
-	  document.write('<script src=' +
-	  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-	  '.js><\/script>')
-	  </script>
-	  
-	  <script src="js/foundation.min.js"></script>
+		<script>
+		document.write('<script src=' +
+		('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
+		'.js><\/script>')
+		</script>
+
+		<script src="js/foundation.min.js"></script>
   <!--
   
   <script src="js/foundation/foundation.js"></script>
@@ -265,5 +288,17 @@
   <script src="js/foundation/foundation.abide.js"></script>
   
   -->
+
+		<script>
+			$(document).foundation();
+		</script>
+
+
+		<!-- Responsive nav -->
+		<script>
+			$("nav select").change(function() {
+				window.location = $(this).find("option:selected").val();
+			});
+		</script>
 	</body>
 </html>
