Updated the link to the API Docs.

--- a/how-fulfillment-works.html
+++ b/how-fulfillment-works.html
@@ -142,7 +142,7 @@
 
 			<h5>Step 3: Integration</h5>
 			<p>
-				We integrate with many major shopping carts, and offer an <a href="https://www.dropbox.com/s/zddz5riyzfhqzhw/API%20Integration%20Guide.pdf" target="_blank">API</a> for clients using an open-source or custom cart.
+				We integrate with many major shopping carts, and offer an <a href="https://www.dropbox.com/s/tx8ceea57qtxxuu/API_Integration_Guide.pdf" target="_blank">API</a> for clients using an open-source or custom cart.
 			</p>
 			<ul>
 				<li>UltraCart (Our recommended shopping cart)</li>
