Integration verbiage adjustment.

--- a/how-fulfillment-works.html
+++ b/how-fulfillment-works.html
@@ -152,8 +152,8 @@
 				<li>BigCommerce  (connector subscription required)</li>
 				<li>Amazon Seller Central  (connector subscription required)</li>
 				<li>Any open-source or custom cart (via API)</li>
-				<li>BackerKit files (for Crowdfunding clients)</li>
-				<li>Celery files (for Crowdfunding clients)</li>
+				<li>BackerKit files</li>
+				<li>Celery files</li>
 				<li>Batch files (CSV, XML)</li>
 			</ul>
 
