--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
 			<div class="row services-i ">
 				<div class="large-4 columns optimized to-left">
 				<i class="fa fa-headphones"></i><span>Call Center</span>
-				<p>If you&rsquo;re getting overwhemled by customer service, give us a try.  We can handle your tickets and phone calls with ease, giving your company a posihed public face and very happy backers.</p>
+				<p>If you&rsquo;re getting overwhelmed by customer service, give us a try.  We can handle your tickets and phone calls with ease, giving your company a polished public face and very happy backers.</p>
 				</div>
 				<div class="large-4 columns optimized to-left">
 				<i class="fa fa-desktop"></i><span>Account Portal</span>
-				<p>Check on order statuses in realtime, manually enter an order, or pull detailed reports.  With our online account portal, you get full visibility into your fulfillment proram when you need it.</p>
+				<p>Check on order statuses in real time, manually enter an order, or pull detailed reports.  With our online account portal, you get full visibility into your fulfillment program when you need it.</p>
 				</div>
 				<div class="large-4 columns optimized to-left">
 				<i class="fa fa-group"></i><span>Account Support</span>
