--- a/how-fulfillment-works.html
+++ b/how-fulfillment-works.html
@@ -148,7 +148,7 @@
 
 			<h5>Step 2: Receiving</h5>
 			<p>
-				During the receiving phase, either you or your product manufacturer will send us an advance shipment notice for all product to be received. Products can be sent to our fulfillment center via truck line or small parcel freight. Once all items have been received, we will begin a full inventory count of all products and assign SKUs as needed. Once the inventory count is completed, the results will be entered into our warehouse management system for tracking, and the products will be put away. From there, shopping cart integration or batch file testing can begin.
+				During the receiving phase, either you or your product manufacturer will send us an advance shipment notice for all products to be received. Products can be sent to our fulfillment center via truck line or small parcel freight. Once all items have been received, we will begin a full inventory count of all products and assign SKUs as needed. Once the inventory count is completed, the results will be entered into our warehouse management system for tracking, and the products will be put away. From there, shopping cart integration or batch file testing can begin.
 			</p>
 
 			<h5>Step 3: Integration</h5>
