--- a/blog.html
+++ b/blog.html
@@ -146,7 +146,7 @@
 						<h5 class="subheader post-info"><i class="fa fa-tags"></i> <a href="tagged-as-news.html">News</a></h5>
 					</div>
 					<p>
-						Entrepeneurs like you have crazy-long to-do lists each day, so our first post will be a short one.
+						Entrepreneurs like you have crazy-long to-do lists each day, so our first post will be a short one.
 						<br><br>
 						Our blog is the best place to find out about what&rsquo;s going on at CrowdFulfill.  Anytime we do service-interrupting system maintenance, or are closed for the holidays, you&rsquo;ll find out about it here first.  If severe weather is causing disruptions to a carrier&rsquo;s service, we&rsquo;ll post it here.  New service announcements?  Yep, you&rsquo;ll find them here as well. Basically anything we feel our valued customers should know about will be posted to our blog, so check back often or follow us on <a href="http://twitter.com/crowdfulfill" target="_blank">Twitter</a> to get notified of new posts.  Cheers!
 					</p>
