--- a/2014-08.html
+++ b/2014-08.html
@@ -205,9 +205,34 @@
 		<!-- end of Content -->
 
 
-	<!-- Footer_big -->
+		<!-- Footer_big -->
 		<div class="footer_big arcus-content">
 			<div class="row">
+				<div class="large-3 columns responsive_space">
+					<h3>Navigation</h3>
+					<div class="decorative-line"></div>
+					<ul>
+					  <li><a href="how-fulfillment-works.html">How it Works</a></li>
+					  <li><a href="contact.html">Contact</a></li>
+					  <li><a href="blog.html">Blog</a></li>
+					  <li><a href="get-a-fulfillment-quote.html">Get a Quote</a></li>
+					</ul>
+				</div>
+				<div class="large-3 columns responsive_space">
+					<h3>Newsletter</h3>
+					<div class="decorative-line"></div>
+					<p>Get service alerts and updates delivered straight to your inbox.</p>
+					<a class="button footer-button" href="http://eepurl.com/YAsjj" target="_blank">Sign Up</a>
+				</div>
+				<div class="large-3 columns responsive_space">
+				<h3>Partners</h3>
+				<div class="decorative-line"></div>
+					<ul>
+					  <li><a href="http://www.3plcentral.com" target="_blank">3PL Central</a></li>
+					  <li><a href="http://www.ultracart.com/features/" target="_blank">UltraCart</a></li>
+					  <li><a href="http://www.orderdesk.me/integrations/" target="_blank">OrderDesk.me</a></li>
+					</ul>
+				</div>
 				<div class="large-3 columns responsive_space">
 				<h3>Get in Touch</h3>
 				<div class="decorative-line"></div>
@@ -219,29 +244,6 @@
 						Monday - Friday<br />
 						9 am - 4 pm Mountain time
 					</p>
-				</div>
-
-				<div class="large-3 columns responsive_space">
-				<h3>Partners</h3>
-				<div class="decorative-line"></div>
-					<ul>
-					  <li><a href="http://www.3plcentral.com" target="_blank">3PL Central</a></li>
-					  <li><a href="http://www.ultracart.com/features/" target="_blank">UltraCart</a></li>
-					  <li><a href="http://www.orderdesk.me/integrations/" target="_blank">OrderDesk.me</a></li>
-					</ul>
-				</div>
-
-				<div class="large-3 columns responsive_space">
-					<h3>Newsletter</h3>
-					<div class="decorative-line"></div>
-					<p>Get service alerts and updates delivered straight to your inbox.</p>
-					<a class="button footer-button" href="http://eepurl.com/YAsjj" target="_blank">Sign Up</a>
-				</div>
-
-				<div class="large-3 columns responsive_space">
-					<h3>Moment of Zen</h3>
-					<div class="decorative-line"></div>
-					<img src="img/Moment-of-Zen.png"></img>
 				</div>
 			</div>
 		</div>
