--- a/2014-08.html
+++ b/2014-08.html
@@ -212,9 +212,9 @@
 					<h3>Navigation</h3>
 					<div class="decorative-line"></div>
 					<ul>
+					  <li><a href="index.html">Home</a></li>
 					  <li><a href="how-fulfillment-works.html">How it Works</a></li>
 					  <li><a href="contact.html">Contact</a></li>
-					  <li><a href="blog.html">Blog</a></li>
 					  <li><a href="get-a-fulfillment-quote.html">Get a Quote</a></li>
 					</ul>
 				</div>
