--- a/404.html
+++ b/404.html
@@ -102,7 +102,7 @@
 					<nav>
 						<!-- Navigation -->
 						<ul class="sf-menu" id="example">
-							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="how-fulfillment-works.html">How it Works</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="blog.html">Blog</a></li>
