--- a/tagged-as-closure.html
+++ b/tagged-as-closure.html
@@ -104,10 +104,10 @@
 					<nav>
 						<!-- Navigation -->
 						<ul class="sf-menu" id="example">
-							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="how-fulfillment-works.html">How it Works</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li class="current"><a href="blog.html">Blog</a></li>
 							<li><a href="get-a-fulfillment-quote.html">Get a Quote</a></li>
 						</ul><!-- end of Navigation -->
 						<!-- Navigation on Mobile Devices -->
