Added buttons to nav.

--- a/tagged-as-closure.html
+++ b/tagged-as-closure.html
@@ -99,8 +99,8 @@
 		<!-- NAVIBAR -->
 		<div class="top_nav">
 			<div class="row">
-				<div class="large-4 columns logo"><img src="img/CrowdFulfill-Logo-Sm.svg" /></div>
-				<div class="large-8 columns">
+				<div class="large-3 columns logo"><img src="img/CrowdFulfill-Logo-Sm.svg" /></div>
+				<div class="large-6 columns">
 					<nav>
 						<!-- Navigation -->
 						<ul class="sf-menu" id="example">
@@ -121,6 +121,12 @@
 						</select>
 						<!-- end of Navigation on Mobile Devices -->
 					</nav>
+				</div>
+				<div class="large-3 columns">
+					<p class="to-center">
+						<a href="get-a-fulfillment-quote.html" class="small secondary button"><i class="fa fa-laptop"></i> Get a Quote</a> 
+						<a href="https://app02.3plcentral.com/PresentationTier/LoginForm.aspx?3pl={2c03274b-c028-4293-8f92-e498703b6338}" target="_blank" class="small secondary button"><i class="fa fa-sign-in"></i> Client Login</a>
+					</p>
 				</div>
 			</div>
 		</div>
