Added buttons to nav.

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 		<!-- NAVIBAR -->
 		<div class="top_nav">
 			<div class="row">
-				<div class="large-4 columns logo"><img src="img/CrowdFulfill-Logo-Sm.svg" /></div>
-				<div class="large-8 columns">
+				<div class="large-3 columns logo"><img src="img/CrowdFulfill-Logo-Sm.svg" /></div>
+				<div class="large-6 columns">
 					<nav>
 						<!-- Navigation -->
 						<ul class="sf-menu" id="example">
@@ -174,7 +174,6 @@
 							<li><a href="how-fulfillment-works.html">How it Works</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="blog.html">Blog</a></li>
-							<li><a href="get-a-fulfillment-quote.html">Get a Quote</a></li>
 						</ul><!-- end of Navigation -->
 						<!-- Navigation on Mobile Devices -->
 						<select> 
@@ -183,10 +182,15 @@
 							<option value="how-fulfillment-works.html">How it Works</option> 
 							<option value="contact.html">Contact</option>
 							<option value="blog.html">Blog</option>
-							<option value="get-a-fulfillment-quote.html">Get a Quote</option>
 						</select>
 						<!-- end of Navigation on Mobile Devices -->
 					</nav>
+				</div>
+				<div class="large-3 columns">
+					<p class="to-center">
+						<a href="get-a-fulfillment-quote.html" class="small secondary button"><i class="fa fa-laptop"></i> Get a Quote</a> 
+						<a href="https://app02.3plcentral.com/PresentationTier/LoginForm.aspx?3pl={2c03274b-c028-4293-8f92-e498703b6338}" target="_blank" class="small secondary button"><i class="fa fa-sign-in"></i> Client Login</a>
+					</p>
 				</div>
 			</div>
 		</div>
